(library
 (name ocsigen_lib_base)
 (public_name ocsigenserver.baselib.base)
 (flags
  (:standard -no-keep-locs))
 (modules ocsigen_lib_base)
 (libraries eio eio.unix))

(library
 (name baselib)
 (public_name ocsigenserver.baselib)
 (wrapped false)
 (flags
  (:standard -no-keep-locs))
 (modules
  dynlink_wrapper
  ocsigen_cache
  ocsigen_config_static
  ocsigen_lib
  ocsigen_loader
  ocsigen_stream)
 (libraries
  str
  findlib
  eio
  cryptokit
  re
  ocsigen_lib_base
  cohttp
  cohttp-eio
  logs
  (select
   dynlink_wrapper.ml
   from
   (dynlink -> dynlink_wrapper.natdynlink.ml)
   (_ -> dynlink_wrapper.nonatdynlink.ml))))

(rule
 (with-stdout-to
  ocsigen_config_static.ml
  (run ../files/ocsigenserver.conf/gen.exe static.ml)))
