(library
 (name ocsigen_lib_base)
 (public_name ocsigenserver.baselib.base)
 (flags
  (:standard -no-keep-locs))
 (modules ocsigen_lib_base)
 (libraries lwt))

(library
 (name baselib)
 (public_name ocsigenserver.baselib)
 (wrapped
  (module_name Ocsigen_base))
 (flags
  (:standard -no-keep-locs))
 (modules dynlink_wrapper cache config_static lib loader ocsigen_stream)
 (libraries
  str
  findlib
  lwt.unix
  cryptokit
  re
  ocsigen_lib_base
  cohttp-lwt
  logs
  (select
   dynlink_wrapper.ml
   from
   (dynlink -> dynlink_wrapper.natdynlink.ml)
   (_ -> dynlink_wrapper.nonatdynlink.ml))))

(rule
 (with-stdout-to
  config_static.ml
  (run ../files/ocsigenserver.conf/gen.exe static.ml)))
