(include_subdirs qualified)

(library
 (name ocsigen_lib_base)
 (public_name ocsigenserver.baselib.base)
 (flags (:standard -no-keep-locs))
 (modules ocsigen_lib_base)
 (libraries lwt))

(library
 (name baselib)
 (public_name ocsigenserver.baselib)
 (wrapped false)
 (flags (:standard -no-keep-locs))
 (modules :standard \ ocsigen_lib_base)
 (libraries
  str findlib lwt.unix cryptokit re ocsigen_lib_base cohttp-lwt logs
  (select dynlink_wrapper.ml from
   (dynlink -> dynlink_wrapper.natdynlink.ml)
   (_ -> dynlink_wrapper.nonatdynlink.ml))))

(subdir Ocsigen_base
 (rule
  (with-stdout-to config_static.ml
   (run ../../files/ocsigenserver.conf/gen.exe static.ml))))
