(library
  (name accesscontrol)
  (modules accesscontrol)
  (libraries xml-light ipaddr baselib ocsigenserver))

(library
  (name authbasic)
  (modules authbasic)
  (libraries lwt xml-light ocsigenserver))

(library
  (name cors)
  (modules cors)
  (libraries ocsigenserver))

(library
  (name extendconfiguration)
  (modules extendconfiguration)
  (libraries ocsigenserver))

(library
  (name outputfilter)
  (modules outputfilter)
  (libraries ocsigenserver))

(library
  (name redirectmod)
  (modules redirectmod)
  (libraries ocsigenserver))

(library
  (name revproxy)
  (modules revproxy)
  (libraries ocsigenserver))

(library
  (name rewritemod)
  (modules rewritemod)
  (libraries ocsigenserver))
