(library
 (name ocsigen_cookie_map)
 (public_name ocsigenserver.cookies)
 (modules ocsigen_cookie_map)
 (libraries ocsigen_lib_base))

(library
 (name ocsigen_http)
 (public_name ocsigenserver.http)
 (wrapped
  (module_name Ocsigen_http))
 (modules charset_mime header)
 (libraries cohttp-lwt-unix baselib logs))
