(include_subdirs qualified)

(library
 (name ocsigen_cookie_map)
 (public_name ocsigenserver.cookies)
 (modules ocsigen_cookie_map)
 (libraries ocsigen_lib_base))

(library
 (name ocsigen_http)
 (public_name ocsigenserver.http)
 (wrapped false)
 (modules :standard \ ocsigen_cookie_map)
 (libraries cohttp-lwt-unix baselib logs))
