(library
  (name ocsidbmtypes)
  (modules_without_implementation ocsidbmtypes)
  (modules ocsidbmtypes))

(library
  (name ocsipersistdbm)
  (modules ocsipersist)
  (libraries dbm ocsidbmtypes ocsigenserver))

(executable
  (name ocsidbm)
  (modules ocsidbm)
  (libraries lwt lwt.unix dbm ocsidbmtypes)
  (modes byte exe))
