(library
  (name ocsidbmtypes)
  (public_name ocsigenserver.ext.ocsidbmtypes)
  (modules_without_implementation ocsidbmtypes)
  (modules ocsidbmtypes))

(library
  (name ocsipersistdbm)
  (public_name ocsigenserver.ext.ocsipersist-dbm)
  (modules ocsipersist)
  (libraries dbm ocsidbmtypes ocsigenserver)
  (implements ocsigenpersist)
  (optional))

(executable
  (name ocsidbm)
  (modules ocsidbm)
  (libraries lwt lwt.unix dbm ocsidbmtypes)
  (modes byte exe)
  (optional))
